--- a/example/index.html
+++ b/example/index.html
@@ -7,8 +7,9 @@
   <title>learn-virtual-dom</title>
 </head>
 <body>
-  <script src="../src/index.js"></script>
-  <script>
+  <script src="./index.js"></script>
+
+  <!-- <script>
     let vdom1 = h("div", {}, [
       h("h1", {}, 0),
       h("button", { }, "-"),
@@ -31,6 +32,6 @@
     patch(root, patches)
 
     document.body.appendChild(root)
-  </script>
+  </script> -->
 </body>
 </html>
